--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 html, body, .App {
-  font-family: 'Lato', sans-serif;
+  font-family: 'PT Serif', sans-serif;
   box-sizing: border-box;
   margin: 0;
-  height: 100%;
-  background: rgb(0,41,107);
-  background: linear-gradient(90deg, rgba(0,41,107,1) 0%, rgba(0,63,136,1) 100%);
+  background: #EBE7DD;
+}
+
+a {
+  text-decoration: none;
+}
+
+.tooltip {
+  transition: all 0.1s ease-out;
 }
